@@ -1,0 +1,12 @@
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr %TESTID%.exits
+
+
+
+test action: CMD_CAPTURE %SWAKS% --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver \
+  --proxy-dest 2.2.2.2 --proxy-dest-port 222 --proxy-source 1.1.1.1 --proxy-source-port 111 --proxy-family TCP4 \
+  --quit-after proxy \
+  --pipe '%TEST_SERVER% --silent --domain pipe \
+  part-0800-proxy-read.txt \
+  part-0000-connect-standard.txt \
+  part-3000-shutdown-accept.txt \
+  '
