@@ -1,0 +1,10 @@
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr %TESTID%.exits
+
+
+
+test action: CMD_CAPTURE %SWAKS% --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver \
+  --quit-after proxy \
+  --pipe '%TEST_SERVER% --silent --domain pipe \
+  part-0000-connect-standard.txt \
+  part-3000-shutdown-accept.txt \
+  '
