@@ -1,0 +1,6 @@
+=== Trying pipe to %TEST_SERVER% --silent --domain pipe   part-0000-connect-standard.txt   part-3000-shutdown-accept.txt   ...
+=== Connected to %TEST_SERVER% --silent --domain pipe   part-0000-connect-standard.txt   part-3000-shutdown-accept.txt   .
+<-  220 SERVER ESMTP ready
+ -> QUIT
+<-  221 SERVER closing connection
+=== Connection closed with child process.
