@@ -1,0 +1,3 @@
+=== Trying pipe to %TEST_SERVER% --silent --domain pipe   ...
+=== Connected to %TEST_SERVER% --silent --domain pipe   .
+=== Dropping connection
