@@ -386,6 +386,7 @@
   114 --quit-after TO
   115 --quit-after STARTTLS
   116 --quit-after XCLIENT-HELO
+  117 --quit-after PROXY
   120 --quit-after CONNECT + no recip doesn't prompt for To:
   121 --quit-after FIRST-HELO + no recip doesn't prompt for To:
   122 --quit-after XCLIENT + no recip doesn't prompt for To:
@@ -412,6 +413,7 @@
   214 --drop-after TO
   215 --drop-after STARTTLS
   216 --drop-after XCLIENT-HELO
+  217 --drop-after PROXY
 --
   300 --drop-after-send CONNECT
   301 --drop-after-send BANNER
@@ -430,6 +432,7 @@
   314 --drop-after-send TO
   315 --drop-after-send STARTTLS
   316 --drop-after-send XCLIENT-HELO
+  317 --drop-after-send PROXY
 --
   400 --protocol smtp
   401 --protocol ssmtp
