@@ -1004,3 +1004,5 @@
            overriding the internal connection information.
 * 20210123 Clarify --auth-optional-strict documentation
 * 20210123 Adding --cc and --bcc options.
+* 20210123 Add PROXY as a valid --quit-after, --drop-after, and
+           --drop-after-send argument.
